Testing and delete modifications

--- a/client/guest-book/src/app/app.component.html
+++ b/client/guest-book/src/app/app.component.html
@@ -1,1 +1,6 @@
+<p>
+    <mat-toolbar style="background-color:cornflowerblue;">
+      <span>Raft Hotel Guest Book</span>
+    </mat-toolbar>
+  </p>
 <app-guest-book-list></app-guest-book-list>
