--- a/client/guest-book/src/styles.css
+++ b/client/guest-book/src/styles.css
@@ -3,3 +3,15 @@
 @import "../node_modules/ag-grid-community/dist/styles/ag-theme-alpine.css";
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.success-snackbar{
+    background-color: green;
+    color: black;
+}
+
+.error-snackbar{
+    background-color: red;
+    color: black;
+}
+
+
