--- a/client/guest-book/src/app/delete-component/delete-component.component.html
+++ b/client/guest-book/src/app/delete-component/delete-component.component.html
@@ -1,3 +1,3 @@
-<button mat-raised-button (click)="onDelete()">
+<button mat-raised-button (click)="onDelete()" style="background-color: red;">
     <mat-icon>delete</mat-icon>
 </button>
