--- a/client/guest-book/src/app/guest-book-list/guest-book-list.component.html
+++ b/client/guest-book/src/app/guest-book-list/guest-book-list.component.html
@@ -1,4 +1,6 @@
+<mat-card class="big-card" style="background-image: url('../assets/HotelLobby3.jpg'); height: fit-content; width: 100%;">
 <app-guest-form class="form" (newGuest)="createGuest($event)"></app-guest-form>
+</mat-card>
 <br>
    <ag-grid-angular style="width:100%; height:50%; align-self: center; padding-bottom: 25px;" class="ag-theme-alpine" [rowData]="guestBookData"
         [columnDefs]="columnDefs" (gridReady)="onGridReady($event)" [context]="context" [gridOptions]="gridOptions">
